[package]
name = "vtable-trace"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Dump a C++ object's vtable in a running Windows process and (optionally) trace calls to each entry."
repository = "https://github.com/AuDowty/vtable-trace"

[dependencies]
clap = { version = "4", features = ["derive"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
